# TensorflowCppAndroid

./: README.md
First/: settings.gradle
First/app/: build.gradle
First/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
First/app/src/main/java/com/example/first/: MainActivity.java
First/gradle/wrapper/: gradle-wrapper.properties
Tfcpp/: settings.gradle
Tfcpp/app/: build.gradle
Tfcpp/app/src/androidTest/java/com/example/tfcpp/: ExampleInstrumentedTest.java
Tfcpp/app/src/main/: AndroidManifest.xml
Tfcpp/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Tfcpp/app/src/main/java/com/example/tfcpp/: MainActivity.java
Tfcpp/app/src/main/res/values/: strings.xml
Tfcpp/app/src/test/java/com/example/tfcpp/: ExampleUnitTest.java
Tfcpp/gradle/wrapper/: gradle-wrapper.properties
